[gd_scene load_steps=12 format=3 uid="uid://by42x3jgwscqn"]

[ext_resource type="Texture2D" uid="uid://y2fkrq150y21" path="res://udemy_roguelike/scenes/game_object/player/player.png" id="1_amds2"]
[ext_resource type="Script" path="res://udemy_roguelike/scenes/game_object/player/player.gd" id="1_luh4f"]
[ext_resource type="PackedScene" uid="uid://c3yfcwhtvn18i" path="res://udemy_roguelike/scenes/component/velocity_component.tscn" id="2_4e5gd"]
[ext_resource type="PackedScene" uid="uid://cha47xw4u0yw5" path="res://udemy_roguelike/scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_l6v6i"]
[ext_resource type="PackedScene" uid="uid://dwmgwbjdr16qk" path="res://udemy_roguelike/scenes/component/health_component.tscn" id="2_upqnx"]

[sub_resource type="Animation" id="Animation_5hnhb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ujp8a"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, -0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 2.63902, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 1.2), Vector2(1.5, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3syh"]
_data = {
"RESET": SubResource("Animation_5hnhb"),
"walk": SubResource("Animation_ujp8a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sk7in"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_41jao"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ds2es"]
radius = 5.0

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_luh4f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j3syh")
}
autoplay = "walk"

[node name="VelocityComponent" parent="." instance=ExtResource("2_4e5gd")]
max_speed = 100
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_upqnx")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_l6v6i")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_sk7in")

[node name="CollisionArea2D" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_41jao")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_amds2")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ds2es")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
